@@ -11,6 +11,8 @@ cod-tools (unreleased)
         - updated the append_changelog_to_single_item() subroutine
           to properly create the changelog data item if it does not
           yet exist in the data block.
+    - codcif:
+        - memory leak of the last line read in by the lexer.
 
 cod-tools (3.4.0)
 
